Added an arbitrary title to RMd

--- a/writing/list_data.Rmd
+++ b/writing/list_data.Rmd
@@ -9,6 +9,9 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+
+#Adding a title (arbitrary change)
+
 ```{r}
 list.files("../data/")
 ```
