More tweaking on final map; reordered victim race factor levels in order of incidence. Also added recursion to README so all files are displayed.

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,8 +12,7 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE)
 # Files in directory:
 
 ```{r listing files}
-list.files(".") #Not sure if this is right; seems like I'd either want to find an option to list contents of subdirectories, or to move everything into one folder. The latter doesn't seem bad with only one input file (so far)
-
+list.files(".", recursive = TRUE) 
 ```
 
 # Assignment Prompt:
